[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nathan-Huckleberry <nhuck15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.2.4"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
