[tool.poetry]
name = "pricemaster"
version = "0.1.0"
description = ""
authors = ["Nathan-Huckleberry <nhuck@pmull.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.2.4"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
